change zipping and derived info pipelines

--- a/config/build-config.yml
+++ b/config/build-config.yml
@@ -1,6 +1,7 @@
 config:
   retrobution:
     revision: 1 # Increment this when the resources change
+    nickname: retrobution
     url: http://www.nanocom.link/assets/
     resources:
       - TableData.resourceFile
