--- a/config/build-config.yml
+++ b/config/build-config.yml
@@ -1,7 +1,6 @@
 config:
   retrobution:
     revision: 1 # Increment this when the resources change
-    nickname: retrobution
     url: http://www.nanocom.link/assets/
     resources:
       - TableData.resourceFile
@@ -87,6 +86,7 @@ config:
       - Tutorial.resourceFile
   beta-20100728:
     revision: 1 # Increment this when the resources change
+    nickname: common-future
     url: https://cdn.dexlabs.systems/ff/big/beta-20100728/
     resources:
       - TableData.resourceFile
