implemented derived info + hide phase in one step, added tdata info, changed operation steps

--- a/config/build-config.yml
+++ b/config/build-config.yml
@@ -2,6 +2,8 @@ config:
   retrobution:
     revision: 1 # Increment this when the resources change
     url: http://www.nanocom.link/assets/
+    server-data:
+      repository: OpenFusionProject/tabledata
     resources:
       - TableData.resourceFile
       - Icons.resourceFile
@@ -10,6 +12,8 @@ config:
     revision: 1 # Increment this when the resources change
     nickname: original
     url: https://cdn.dexlabs.systems/ff/big/beta-20100104/
+    server-data:
+      repository: OpenFusionProject/tabledata
     resources:
       - TableData.resourceFile
       - Icons.resourceFile
@@ -17,6 +21,8 @@ config:
   beta-20100119:
     revision: 1 # Increment this when the resources change
     url: https://cdn.dexlabs.systems/ff/big/beta-20100119/
+    server-data:
+      repository: OpenFusionProject/tabledata
     resources:
       - TableData.resourceFile
       - Icons.resourceFile
@@ -24,6 +30,8 @@ config:
   beta-20100207:
     revision: 1 # Increment this when the resources change
     url: https://cdn.dexlabs.systems/ff/big/beta-20100207/
+    server-data:
+      repository: OpenFusionProject/tabledata
     resources:
       - TableData.resourceFile
       - Icons.resourceFile
@@ -31,6 +39,8 @@ config:
   beta-20100307:
     revision: 1 # Increment this when the resources change
     url: https://cdn.dexlabs.systems/ff/big/beta-20100307/
+    server-data:
+      repository: OpenFusionProject/tabledata
     resources:
       - TableData.resourceFile
       - Icons.resourceFile
@@ -38,6 +48,8 @@ config:
   beta-20100322:
     revision: 1 # Increment this when the resources change
     url: https://cdn.dexlabs.systems/ff/big/beta-20100322/
+    server-data:
+      repository: OpenFusionProject/tabledata
     resources:
       - TableData.resourceFile
       - Icons.resourceFile
@@ -45,6 +57,8 @@ config:
   beta-20100413:
     revision: 1 # Increment this when the resources change
     url: https://cdn.dexlabs.systems/ff/big/beta-20100413/
+    server-data:
+      repository: OpenFusionProject/tabledata
     resources:
       - TableData.resourceFile
       - Icons.resourceFile
@@ -52,6 +66,8 @@ config:
   beta-20100502:
     revision: 1 # Increment this when the resources change
     url: https://cdn.dexlabs.systems/ff/big/beta-20100502/
+    server-data:
+      repository: OpenFusionProject/tabledata
     resources:
       - TableData.resourceFile
       - Icons.resourceFile
@@ -59,6 +75,8 @@ config:
   beta-20100524:
     revision: 1 # Increment this when the resources change
     url: https://cdn.dexlabs.systems/ff/big/beta-20100524/
+    server-data:
+      repository: OpenFusionProject/tabledata
     resources:
       - TableData.resourceFile
       - Icons.resourceFile
@@ -66,6 +84,8 @@ config:
   beta-20100604:
     revision: 1 # Increment this when the resources change
     url: https://cdn.dexlabs.systems/ff/big/beta-20100604/
+    server-data:
+      repository: OpenFusionProject/tabledata
     resources:
       - TableData.resourceFile
       - Icons.resourceFile
@@ -73,6 +93,8 @@ config:
   beta-20100616:
     revision: 1 # Increment this when the resources change
     url: https://cdn.dexlabs.systems/ff/big/beta-20100604/ # beta-20100616 is broken, use beta-20100604 instead
+    server-data:
+      repository: OpenFusionProject/tabledata
     resources:
       - TableData.resourceFile
       - Icons.resourceFile
@@ -80,6 +102,8 @@ config:
   beta-20100711:
     revision: 1 # Increment this when the resources change
     url: https://cdn.dexlabs.systems/ff/big/beta-20100711/
+    server-data:
+      repository: OpenFusionProject/tabledata
     resources:
       - TableData.resourceFile
       - Icons.resourceFile
@@ -88,6 +112,8 @@ config:
     revision: 1 # Increment this when the resources change
     nickname: common-future
     url: https://cdn.dexlabs.systems/ff/big/beta-20100728/
+    server-data:
+      repository: OpenFusionProject/tabledata
     resources:
       - TableData.resourceFile
       - Icons.resourceFile
@@ -95,6 +121,8 @@ config:
   beta-20100909:
     revision: 1 # Increment this when the resources change
     url: https://cdn.dexlabs.systems/ff/big/beta-20100909/
+    server-data:
+      repository: OpenFusionProject/tabledata
     resources:
       - TableData.resourceFile
       - Icons.resourceFile
@@ -102,6 +130,8 @@ config:
   beta-20101003:
     revision: 1 # Increment this when the resources change
     url: https://cdn.dexlabs.systems/ff/big/beta-20101003/
+    server-data:
+      repository: OpenFusionProject/tabledata
     resources:
       - TableData.resourceFile
       - Icons.resourceFile
@@ -109,6 +139,8 @@ config:
   beta-20101011:
     revision: 1 # Increment this when the resources change
     url: https://cdn.dexlabs.systems/ff/big/beta-20101011/
+    server-data:
+      repository: OpenFusionProject/tabledata
     resources:
       - TableData.resourceFile
       - Icons.resourceFile
@@ -116,6 +148,8 @@ config:
   beta-20101028:
     revision: 1 # Increment this when the resources change
     url: https://cdn.dexlabs.systems/ff/big/beta-20101028/
+    server-data:
+      repository: OpenFusionProject/tabledata
     resources:
       - TableData.resourceFile
       - Icons.resourceFile
@@ -124,6 +158,8 @@ config:
     revision: 1 # Increment this when the resources change
     nickname: latest-future
     url: https://cdn.dexlabs.systems/ff/big/beta-20101123/
+    server-data:
+      repository: OpenFusionProject/tabledata
     resources:
       - TableData.resourceFile
       - Icons.resourceFile
@@ -132,12 +168,20 @@ config:
     revision: 1 # Increment this when the resources change
     nickname: earliest-academy
     url: https://cdn.dexlabs.systems/ff/big/beta-20110213/
+    server-data:
+      repository: OpenFusionProject/tabledata
+      patches:
+        - "1013"
     resources:
       - TableData.resourceFile
       - Icons.resourceFile
   beta-20110314:
     revision: 1 # Increment this when the resources change
     url: https://cdn.dexlabs.systems/ff/big/beta-20110314/
+    server-data:
+      repository: OpenFusionProject/tabledata
+      patches:
+        - "1013"
     resources:
       - TableData.resourceFile
       - Icons.resourceFile
@@ -145,12 +189,20 @@ config:
   beta-20110330:
     revision: 1 # Increment this when the resources change
     url: https://cdn.dexlabs.systems/ff/big/beta-20110330/
+    server-data:
+      repository: OpenFusionProject/tabledata
+      patches:
+        - "1013"
     resources:
       - TableData.resourceFile
       - Icons.resourceFile
   beta-20110424:
     revision: 1 # Increment this when the resources change
     url: https://cdn.dexlabs.systems/ff/big/beta-20110424/
+    server-data:
+      repository: OpenFusionProject/tabledata
+      patches:
+        - "1013"
     resources:
       - TableData.resourceFile
       - Icons.resourceFile
@@ -158,6 +210,10 @@ config:
   beta-20110523:
     revision: 1 # Increment this when the resources change
     url: https://cdn.dexlabs.systems/ff/big/beta-20110523/
+    server-data:
+      repository: OpenFusionProject/tabledata
+      patches:
+        - "1013"
     resources:
       - TableData.resourceFile
       - Icons.resourceFile
@@ -165,6 +221,10 @@ config:
   beta-20110725:
     revision: 1 # Increment this when the resources change
     url: https://cdn.dexlabs.systems/ff/big/beta-20110725/
+    server-data:
+      repository: OpenFusionProject/tabledata
+      patches:
+        - "1013"
     resources:
       - TableData.resourceFile
       - Icons.resourceFile
@@ -172,6 +232,10 @@ config:
   beta-20110818:
     revision: 1 # Increment this when the resources change
     url: https://cdn.dexlabs.systems/ff/big/beta-20110818/
+    server-data:
+      repository: OpenFusionProject/tabledata
+      patches:
+        - "1013"
     resources:
       - TableData.resourceFile
       - Icons.resourceFile
@@ -179,6 +243,10 @@ config:
   beta-20110912:
     revision: 1 # Increment this when the resources change
     url: https://cdn.dexlabs.systems/ff/big/beta-20110912/
+    server-data:
+      repository: OpenFusionProject/tabledata
+      patches:
+        - "1013"
     resources:
       - TableData.resourceFile
       - Icons.resourceFile
@@ -186,6 +254,10 @@ config:
     revision: 1 # Increment this when the resources change
     nickname: academy
     url: https://cdn.dexlabs.systems/ff/big/beta-20111013/
+    server-data:
+      repository: OpenFusionProject/tabledata
+      patches:
+        - "1013"
     resources:
       - TableData.resourceFile
       - Icons.resourceFile
