--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,5 @@ httpx
 aiofiles
 PyYAML
 tqdm
+humanize
 git+https://github.com/dongresource/UnityPackFF.git@ec9c4524ffc93e0482c500d810dd63cfa110be40
