--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,13 +3,10 @@ name: Create Release with Artifacts
 on:
   push:
     branches: [ main ]
-  pull_request:
-    types: [ closed ]
-    branches: [ main ]
 
 jobs:
   build-and-release:
-    if: github.event.pull_request.merged == true || github.event_name == 'push'
+    if: github.event_name == 'push'
     runs-on: ubuntu-latest
 
     steps:
