--- a/config/build-config.yml
+++ b/config/build-config.yml
@@ -1,7 +1,7 @@
 config:
   retrobution:
-    revision: 14 # Increment this when the resources change
-    active_event: Knishmas # Possible values: None, Halloween, Knishmas, BirthdayBash, Valentines
+    revision: 15 # Increment this when the resources change
+    active_event: None # Possible values: None, Halloween, Knishmas, BirthdayBash, Valentines
     api-url: https://api.ffretrobution.net
     server-data:
       repository: Retrobution/Retrobution-TableData
